--- a/includes/head.html
+++ b/includes/head.html
@@ -30,7 +30,7 @@
 <meta property="og:title" content="{{-metatitle-}}">
 <meta property="og:type" content="{{-metatype-}}">
 <meta property="og:url" content="{{ page.url | prepend: site.baseurl }}">
-<meta property="og:image" content="/assets/avatar.svg">
+<meta property="og:image" content="/assets/avatar.jpeg">
 <meta property="og:description" content="{{- metadesc -}}">
 
 <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}">
