--- a/includes/schema.html
+++ b/includes/schema.html
@@ -1,8 +1,8 @@
 <script type="application/ld+json">{
   "@context": "http://schema.org",
   "@type": "WebSite",
-  "name": "Enrico Capitanio | Digital Manager",
-  "url": "https://enricocapitanio.com"
+  "name": "Nightdoomer Podcast",
+  "url": "https://nightdoomer.com"
   }
 </script>
 
@@ -10,26 +10,15 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Montebello Vicentino",
-        "addressRegion": "IT",
-        "postalCode": "36054"
-      },
-      "email": "info@enricocapitanio.com",
-      "image": "/assets/profile.jpg",
-      "jobTitle": "Digital Manager",
-      "name": "Enrico Capitanio",
-      "birthPlace": "Vicenza, IT",
-      "birthDate": "1988-09-08",
+      "email": "info@nightdoomer.com",
+      "image": "/assets/avatar.jpeg",
+      "jobTitle": "Podcaster",
+      "name": "NightDoomer",
       "gender": "male",
       "nationality": "Italian",
-      "url": "https://www.enricocapitanio.com",
+      "url": "https://www.nightdoomer.com",
 	    "sameAs" : [ 
-      "https://www.enricocapitanio.it",
-      "https://www.linkedin.com/in/enrico-capitanio/",
-      "https://www.instagram.com/capannonia/",
-      "https://www.goodreads.com/user/show/127780586-enrico-capitanio"
+      "https://tiktok.com/@nightdoomer"
       ]
     }
     </script>
