--- a/layouts/default.html
+++ b/layouts/default.html
@@ -24,7 +24,7 @@
     </main>
     
     <footer class="page-footer">
-        <small>Copyright {{site.author}} | <a href="mailto:enrico@enricocapitanio.com">@mail</a>| 2022</small>
+        <small>Copyright {{site.author}} | <a href="mailto:info@nightdoomer.com">@mail</a>| 2022</small>
         {% include 'schema.html' %}
     </footer>
 </body>
