--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,13 +10,16 @@
 </div>
     <header class="page-header">
         <a href="/" class="page-header__logo" title="Go home">
-            <img src="/assets/avatar.svg" alt="" width="80">
+            <img src="/assets/avatar.jpeg" alt="" width="80">
         </a>
 
         <nav>
             <a href="/">Home</a>
-            <a href="/about">About Me</a>
-            <a href="/notes">Notes</a>
+            <a href="/notes">Podcast</a>
+            <a href="/notes">Tiktok</a>
+            <!--<a href="/notes">Spotify</a>-->
+            <!--<a href="/notes">Google Podcast</a>-->
+            <!--<a href="/notes">Apple Podcast</a>-->
         </nav>
     </header>
     <main>        
