--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Aut";
+    src: url(assets/aut.ttf);
+}
+
+
 :root {
     --accent: rgb(220, 0, 0);
     --grey: #444;
@@ -5,7 +11,7 @@
     --white: rgb(242, 242, 242);
     --progress-bar-height: 3px;
     --progress-bar-color: rgb(10, 10, 10);
-    --progress-bar-value-color: rgb(0, 220, 0);
+    --progress-bar-value-color: rgb(220, 0, 0);
     --progress-bar-value: 20%;  
 }
 
@@ -19,7 +25,7 @@ html {
 strong {color:var(--accent)}
 
 body {
-    font-family: 'Karla', sans-serif;
+    font-family: 'Arial', sans-serif;
     line-height: 1.65;
     
     display: flex;
@@ -100,13 +106,14 @@ h1, h2, h3, h4, h5 {
   margin: 2.75rem 0 1.05rem;
   font-weight: 400;
   line-height: 1.15;
+  font-family:"Aut", sans-serif;
 }
 
 h1 {font-size: 3.052em;}
 
 h2 {font-size: 2.441em;}
 
-h3 {font-size: 1.953em;color:rgb(0, 255, 0);}
+h3 {font-size: 1.953em;color:rgb(220, 0, 0);}
 
 h4 {font-size: 1.563em;}
 
