--- a/assets/style.css
+++ b/assets/style.css
@@ -64,6 +64,9 @@ img {
 nav a {
     margin: 0 12px;
     font-size: 1.25em;
+    font-family: "Aut", sans-serif;
+    font-size: 14px;
+    color: var(--accent)!important;
 }
 
 main {
@@ -83,11 +86,20 @@ main {
 }
 
 a[href] {
-    color: var(--accent);
+    text-decoration:none;
+    color:white;
 }
 
+p a[href]::after {
+    content: "»";
+    color: var(--accent);
+    margin: 0 4px;
+}
+
+
 a[href]:hover {
-    text-decoration: none;
+    text-decoration: underline;
+    color: var(--accent);
 }
 
 a[href]:focus {
@@ -107,17 +119,18 @@ h1, h2, h3, h4, h5 {
   font-weight: 400;
   line-height: 1.15;
   font-family:"Aut", sans-serif;
+  text-shadow: 1px 2px darkred;
 }
 
-h1 {font-size: 3.052em;}
+h1 {font-size: 2.052em;}
 
-h2 {font-size: 2.441em;}
+h2 {font-size: 1.441em;}
 
-h3 {font-size: 1.953em;color:rgb(220, 0, 0);}
+h3 {font-size: 0.953em;color:rgb(220, 0, 0);}
 
-h4 {font-size: 1.563em;}
+h4 {font-size: 0.563em;}
 
-h5, .larger {font-size: 1.25em;}
+h5, .larger {font-size: 0.25em;}
 
 small {font-size: 0.8em;}
 
