--- a/assets/style.css
+++ b/assets/style.css
@@ -3,12 +3,17 @@
     src: url(/assets/VT323.ttf);
 }
 
+@font-face {
+    font-family: "Newer";
+    src: url(/assets/Found.ttf);
+}
+
 
 :root {
     --accent: rgb(220, 0, 0);
     --grey: #444;
     --black: #000;
-    --white: rgb(242, 242, 242);
+    --white: rgb(240, 235, 235);
     --progress-bar-height: 3px;
     --progress-bar-color: rgb(10, 10, 10);
     --progress-bar-value-color: rgb(220, 0, 0);
@@ -25,7 +30,7 @@ html {
 strong {color:var(--accent)}
 
 body {
-    font-family: 'VT', sans-serif;
+    font-family: 'Newer', sans-serif;
     line-height: 1.65;
     
     display: flex;
