--- a/layouts/default.html
+++ b/layouts/default.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="/">Home</a>
             <a href="/notes">Podcast</a>
-            <a href="/notes">Tiktok</a>
+            <a href="/notes"><img class="page-header__logo" src="/assets/tk_logo.gif" width="50px" height="50px"></a>
             <!--<a href="/notes">Spotify</a>-->
             <!--<a href="/notes">Google Podcast</a>-->
             <!--<a href="/notes">Apple Podcast</a>-->
