--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,7 +10,7 @@
 </div>
     <header class="page-header">
         <a href="/" class="page-header__logo" title="Go home">
-            <img src="/assets/avatar.jpeg" alt="" width="80">
+            <img src="/assets/avatar.jpeg" alt="Nightdoomer Logo" width="80">
         </a>
 
         <nav>
